# DyWinTmodel

./: .gitattributes  .gitignore  DyWinT.py  DyWinT3.py  DyWinT5.py  README.md  del.py  main.py  main3.py  pyproject.toml  tempCodeRunnerFile.py
checkpoints/: best_model.pth  final_model.pth
configs/: config.yaml
configs/dataset/: mock.yaml  real.yaml
configs/mode/: demo.yaml  prod.yaml
docs/: DEVELOPER.md
legacy/DyWinT_versions/: DyWinT4.py  DyWinT5.py
legacy/oldmain/: main.py
legacy/oldreal/: DIT.py  VAE.py
modelreal/: DyWinT2.py  DyWinT6.py
oldmain/: main2.py
oldreal/: ReLiKT.py
src/: main.py  model.py
