[project]
name = "text-audio-alignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.4.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "ollama>=0.4.7",
    "pillow>=11.1.0",
    "scikit-learn>=1.6.1",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "torch>=2.5.0",
    "torchvision<=0.21.0",
    "torchaudio",
    "einops>=0.8.1",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
