[project]
name = "dywint-speech-model"
version = "0.1.0"
description = "Dynamic Windowed Conformer for High-Resolution Phoneme Emission"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "hydra-core>=1.3.2",
    "librosa>=0.10.0",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
]